# Hugo

./: hugo_bringup.launch  odom_gps.txt  odrive_check.launch  rtabtest.launch  test_rtab2.launch
Launch Files/: backup_hugo_bringup_2.launch  gps_check.launch  hugo_bringup_2.launch  hugo_move_base_bringup.launch  navfix.txt  remote_mapping.launch  tes_gps.launch  test_rtab.launch  velocity_test.launch
Tools/: How To Copy HardDisk  OdriveCommands  Odrive_Test_Script.py  hub_motor.json
cob_base_velocity_smoother/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cob_base_velocity_smoother/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
cob_base_velocity_smoother/cfg/: params.cfg
cob_base_velocity_smoother/config/: standalone.yaml
cob_base_velocity_smoother/devel/: .catkin  .rosinstall  setup.sh
cob_base_velocity_smoother/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gps_goal/: gpstest.txt
gps_goal/launch/: initialize_origin.launch
hugo-2d-nav/: CMakeLists.txt  README.md  package.xml
hugo-urdf/: CMakeLists.txt  package.xml
hugo_visualization/: CMakeLists.txt  package.xml
joystick_driver/: CMakeLists.txt  package.xml
odrive_ros-master/: MANIFEST
simple_drive/: CMakeLists.txt  package.xml
simple_drive/launch/: drive_teleop.launch  simple_drive.launch
simple_drive/msg/: serial_joy.msg
simple_drive/nodes/: serial_reader
simple_drive/src/simple_drive/: serial_reader.py  simple_drive.py
velocity_overwrite/: package.xml
(+54 files in other folders)
